--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "cfdabe9e-7cc8-40e3-9725-d80209c3e763"
 authors = ["DanielVandH <danj.vandenheuvel@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
 [compat]
 julia = "1"
 
