--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "FiniteVolumeMethod1D"
 uuid = "cfdabe9e-7cc8-40e3-9725-d80209c3e763"
-authors = ["DanielVandH <danj.vandenheuvel@gmail.com> and contributors"]
-version = "1.0.0-DEV"
+authors = ["Daniel VandenHeuvel <danj.vandenheuvel@gmail.com>"]
+version = "1.0.0"
 
 [deps]
 CommonSolve = "38540f10-b2f7-11e9-35d8-d573e4eb0ff2"
