--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,8 @@ jobs:
       matrix:
         version:
           - '1'
-          - '1.6'
+          - 'lts'
+          - 'pre'
         os:
           - ubuntu-latest
         arch:
